--- a/themes/volantis/source/css/_szyink-plugins/first.styl
+++ b/themes/volantis/source/css/_szyink-plugins/first.styl
@@ -20,10 +20,16 @@
 
 // 修改文章字体
 article > p
-  font-family: -apple-system,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Microsoft YaHei,Source Han Sans SC,Noto Sans CJK SC,WenQuanYi Micro Hei,sans-serif
   font-weight: 400 !important;
   line-height: 2 !important;
   margin: 0 0 20px 0;
+
+
+h1.title 
+  text-align: center;
+  font-size: 2rem!important;
+  font-weight: 600;
+  font-family: sxls,"PingFang SC","Microsoft YaHei",Helvetica,Arial,Helvetica,monospace !important;
 
 //.j-china-lantern
 //   @media screen and (max-width: 1400px)
