使用fork的volantis主题代替原来的主题

--- a/themes/volantis/source/css/_defines/fonts.styl
+++ b/themes/volantis/source/css/_defines/fonts.styl
@@ -1,5 +1,6 @@
 $fontfamily = "PingFang SC", "Microsoft YaHei", Helvetica, Arial, Menlo, Monaco, monospace, "Lucida Console", sans-serif
 if hexo-config('custom_css.fontfamily.bodyfont')
+  if false
     @font-face
       font-family: hexo-config('custom_css.fontfamily.bodyfont.name')
       src: url(hexo-config('custom_css.fontfamily.bodyfont.url'))
@@ -12,6 +13,7 @@ if hexo-config('custom_css.fontfamily.bodyfont')
 
 $fontfamily-code = Menlo, Monaco, monospace, courier, sans-serif
 if hexo-config('custom_css.fontfamily.codefont')
+  if false
     @font-face
       font-family: hexo-config('custom_css.fontfamily.codefont.name')
       src: url(hexo-config('custom_css.fontfamily.codefont.url'))
@@ -25,6 +27,7 @@ if hexo-config('custom_css.fontfamily.codefont')
 
 $fontfamily-logo = $fontfamily
 if hexo-config('custom_css.fontfamily.logofont')
+  if false
     @font-face
       font-family: hexo-config('custom_css.fontfamily.logofont.name')
       src: url(hexo-config('custom_css.fontfamily.logofont.url'))
