使用notshow front-matter指定是否在首页展示

--- a/themes/volantis/source/css/_szyink/custom.styl
+++ b/themes/volantis/source/css/_szyink/custom.styl
@@ -146,7 +146,7 @@ div.note
 
 // 全局背景
 #BKG
-  background-image: url("/img/bkg/wallhaven-1k13pv.jpg")
+  background-image: url("/image/background.webp")
   background-size: cover
   z-index: -20
   position: fixed
